# jithin-chatbot

./: .gitattributes  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: sync-to-hf.yaml
docs/: summary.txt
