[project]
name = "jithin-chatbot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "gradio>=6.2.0",
    "openai>=2.14.0",
    "pypdf>=6.5.0",
    "requests>=2.32.5",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-community>=0.0.10",
    "chromadb>=0.4.0",
    "tiktoken>=0.5.1",
]
